32-oauth-mock-manager