@@ -2,6 +2,7 @@ package nl.rowendu.rlresttemplate.client;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.client.match.MockRestRequestMatchers.*;
 import static org.springframework.test.web.client.response.MockRestResponseCreators.*;
@@ -11,8 +12,11 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.math.BigDecimal;
 import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.time.Instant;
 import java.util.Collections;
 import java.util.UUID;
+
+import nl.rowendu.rlresttemplate.config.OAuthClientInterceptor;
 import nl.rowendu.rlresttemplate.config.RestTemplateBuilderConfig;
 import nl.rowendu.rlresttemplate.model.BeerDTO;
 import nl.rowendu.rlresttemplate.model.BeerDTOPageImpl;
@@ -22,13 +26,26 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.autoconfigure.web.client.RestClientTest;
+import org.springframework.boot.test.context.TestConfiguration;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.boot.test.web.client.MockServerRestTemplateCustomizer;
 import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
 import org.springframework.data.domain.Page;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
+import org.springframework.security.oauth2.client.InMemoryOAuth2AuthorizedClientService;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClient;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClientManager;
+import org.springframework.security.oauth2.client.OAuth2AuthorizedClientService;
+import org.springframework.security.oauth2.client.registration.ClientRegistration;
+import org.springframework.security.oauth2.client.registration.ClientRegistrationRepository;
+import org.springframework.security.oauth2.client.registration.InMemoryClientRegistrationRepository;
+import org.springframework.security.oauth2.core.AuthorizationGrantType;
+import org.springframework.security.oauth2.core.OAuth2AccessToken;
 import org.springframework.test.web.client.MockRestServiceServer;
 import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
@@ -40,6 +57,7 @@ import org.springframework.web.util.UriUtils;
 class BeerClientMockTest {
 
   static final String URL = "http://localhost:8080";
+  public static final String BEARER_TEST = "Bearer test";
 
   @Autowired ObjectMapper objectMapper;
   @Autowired RestTemplateBuilder restTemplateBuilderConfigured;
@@ -53,8 +71,47 @@ class BeerClientMockTest {
   BeerDTO expectedBeer;
   String beerPayload;
 
+  @MockBean
+  OAuth2AuthorizedClientManager manager;
+
+  @TestConfiguration
+  public static class TestConfig {
+
+    @Bean
+    ClientRegistrationRepository clientRegistrationRepository() {
+      return new InMemoryClientRegistrationRepository(ClientRegistration
+              .withRegistrationId("springauth")
+              .authorizationGrantType(AuthorizationGrantType.CLIENT_CREDENTIALS)
+              .clientId("test")
+              .tokenUri("test")
+              .build());
+    }
+
+    @Bean
+    OAuth2AuthorizedClientService auth2AuthorizedClientService(ClientRegistrationRepository clientRegistrationRepository){
+      return new InMemoryOAuth2AuthorizedClientService(clientRegistrationRepository);
+    }
+
+    @Bean
+    OAuthClientInterceptor oAuthClientInterceptor(@Qualifier("auth2AuthorizedClientManager") OAuth2AuthorizedClientManager manager, ClientRegistrationRepository clientRegistrationRepository){
+      return new OAuthClientInterceptor(manager, clientRegistrationRepository);
+    }
+  }
+
+  @Autowired
+  ClientRegistrationRepository clientRegistrationRepository;
+
   @BeforeEach
   void setUp() throws JsonProcessingException {
+    ClientRegistration clientRegistration = clientRegistrationRepository
+            .findByRegistrationId("springauth");
+
+    OAuth2AccessToken token = new OAuth2AccessToken(OAuth2AccessToken.TokenType.BEARER,
+            "test", Instant.MIN, Instant.MAX);
+
+    when(manager.authorize(any())).thenReturn(new OAuth2AuthorizedClient(clientRegistration,
+            "test", token));
+
     RestTemplate restTemplate = restTemplateBuilderConfigured.build();
     server = MockRestServiceServer.bindTo(restTemplate).build();
     when(mockRestTemplateBuilder.build()).thenReturn(restTemplate);
@@ -79,7 +136,7 @@ class BeerClientMockTest {
 
     server
         .expect(method(HttpMethod.GET))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(requestTo(uri))
         .andExpect(queryParam("beerName", encodedBeerName))
         .andRespond(withSuccess(beerPayload, MediaType.APPLICATION_JSON));
@@ -89,14 +146,14 @@ class BeerClientMockTest {
 
     Page<BeerDTO> responsePage = beerClient.listBeers(parameters);
     assertThat(responsePage.getContent()).hasSize(1);
-    assertThat(responsePage.getContent().get(0).getBeerName()).isEqualTo(beerName);
+    assertThat(responsePage.getContent().getFirst().getBeerName()).isEqualTo(beerName);
   }
 
   @Test
   void testDeleteNotFound() {
     server
         .expect(method(HttpMethod.DELETE))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(
             requestToUriTemplate(URL + BeerClientImpl.GET_BEER_BY_ID_PATH, expectedBeer.getId()))
         .andRespond(withResourceNotFound());
@@ -111,7 +168,7 @@ class BeerClientMockTest {
   void testDeleteBeer() {
     server
         .expect(method(HttpMethod.DELETE))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(
             requestToUriTemplate(URL + BeerClientImpl.GET_BEER_BY_ID_PATH, expectedBeer.getId()))
         .andRespond(withNoContent());
@@ -124,7 +181,7 @@ class BeerClientMockTest {
   void testUpdateBeer() {
     server
         .expect(method(HttpMethod.PUT))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(
             requestToUriTemplate(URL + BeerClientImpl.GET_BEER_BY_ID_PATH, expectedBeer.getId()))
         .andRespond(withNoContent());
@@ -143,7 +200,7 @@ class BeerClientMockTest {
 
     server
         .expect(method(HttpMethod.POST))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(requestTo(URL + BeerClientImpl.GET_BEER_PATH))
         .andRespond(withAccepted().location(uri));
 
@@ -156,7 +213,7 @@ class BeerClientMockTest {
   private void mockGetOperation() {
     server
         .expect(method(HttpMethod.GET))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(
             requestToUriTemplate(URL + BeerClientImpl.GET_BEER_BY_ID_PATH, expectedBeer.getId()))
         .andRespond(withSuccess(beerPayload, MediaType.APPLICATION_JSON));
@@ -167,7 +224,7 @@ class BeerClientMockTest {
     String beerPayload = objectMapper.writeValueAsString(getPage());
     server
         .expect(method(HttpMethod.GET))
-        .andExpect(header("Authorization", "Basic dXNlcjE6cGFzc3dvcmQ="))
+        .andExpect(header("Authorization", BEARER_TEST))
         .andExpect(requestTo(URL + BeerClientImpl.GET_BEER_PATH))
         .andRespond(withSuccess(beerPayload, MediaType.APPLICATION_JSON));
 
